# rag-interface

./: .coverage  .env.dev  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CI_CD_PIPELINE_README.md  CODE_REVIEW_SUMMARY_AND_RECOMMENDATIONS.md  ERROR_REPORTING_BUCKET_TYPES_FIX_REPORT.md  ERROR_REPORTING_CRITICAL_BUG_ANALYSIS.md  FINAL_ERROR_REPORTING_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PHASE1_COMPLETION_REPORT.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  README.md  check_all_services_status.py  check_services_status.py  docker-compose.dev.yml  docker-compose.simple.yml  docker-compose.yml  phi-removal.py  podman-compose.dev.yml  pyproject.toml  pytest.ini  requirements-prod.txt  requirements-test.txt  requirements.txt  run-error-reporting-tests.sh  simple_api_gateway.py  start_services.py  test_bucket_types.html  test_phase1_fixes.py  test_phase2_functionality.py  test_phase3_functionality.py  test_phase4_functionality.py  validate_setup.py
.github/workflows/: cd.yml  ci.yml
backend/tests/: INTEGRATION_TEST_GUIDE.md  run_integration_tests.py  validate_system.py
config/environments/: development.env  production.env  testing.env
deployment/: MAINTENANCE_GUIDE.html  MAINTENANCE_GUIDE.md  README.md  USER_MANUAL.html  USER_MANUAL.md
deployment/database/: README.md
deployment/podman/: .env.template  Dockerfile.correction-engine-service  Dockerfile.error-reporting-service  Dockerfile.frontend  Dockerfile.rag-integration-service  Dockerfile.user-management-service  Dockerfile.verification-service  default.conf  deploy.sh  docker-compose.yml  nginx.conf
docker/error-reporting-service/: Dockerfile
docker/rag-integration-service/: Dockerfile
docs/: BUCKET_PROGRESSION_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT_WORKFLOWS.md  INDEX.md  PHASE_1_DOCUMENTATION_SUMMARY.md  QUICK_REFERENCE.md  RAG_Interface_System_Complete_Reference.html  RAG_Interface_System_Complete_Reference.md  README.md  TROUBLESHOOTING_GUIDE.md  USER_MANUAL.md  implementation_roadmap.md  postgres-local-dev.md
docs/api/: enhanced_error_reporting_api.md  speaker_bucket_management_api.html  speaker_bucket_management_api.md
docs/architecture/: 00_Master_Architecture_Summary.md  07_Enhanced_Documentation_Diagrams.md  ASR_System_Architecture_Design.md  database_schema_design.md  system-architecture.md  system_integration_design.md  vector_db_data_model.md
docs/deployment/: ARCHITECTURE_CHANGES.md  README.md
docs/development/: DEVELOPMENT_GUIDE.md  Technology_Stack_Standards.md  rag-integration-service-implementation.md
docs/frontend/: BucketProgression_System_Documentation.md  Enhanced_UI_Wireframes_and_Mockups.md  ErrorReporting_Complete_Design_Documentation.html  ErrorReporting_Complete_Design_Documentation.md  ErrorReporting_Implementation_Summary.html  ErrorReporting_Implementation_Summary.md  ErrorReporting_Technical_Diagrams.html  ErrorReporting_Technical_Diagrams.md  ErrorReporting_UIUX_design_impl.html  ErrorReporting_UIUX_design_impl.md  ErrorReporting_Wireframes_and_Flows.html  ErrorReporting_Wireframes_and_Flows.md  QualityBased_Speaker_Bucket_System_Design.html  QualityBased_Speaker_Bucket_System_Design.md  UI_UX_Architecture_Design.md  User_Experience_Workflows_Design.md
docs/user-guide/: mt-validation-workflow.md
docs/user-guides/: QUICK_REFERENCE.md  TROUBLESHOOTING_GUIDE.md  USER_MANUAL.md
documents/: ASR_Error_Reporting_PRD.html  ASR_Error_Reporting_PRD.md  ASR_System_Architecture_Design.html  ASR_System_Architecture_Design.md  Architectural_Alignment_Audit_Report.md  Documentation_Review_Findings.md  ERS_System_Architecture_Design.html  ERS_System_Architecture_Design.md  IMPLEMENTATION_SUMMARY.md  SOLID_Principles_Implementation_Guide.md  UI_UX_Architecture_Design.md  UI_UX_Enhanced_Diagrams_and_Stories.md  overview.txt  speaker_bucket_management.txt  vector_db_data_model.html  vector_db_data_model.md
documents/detailed_architecture/: 01_Error_Reporting_Service_Design.md  02_RAG_Integration_Service_Design.md  03_Correction_Engine_Service_Design.html  03_Correction_Engine_Service_Design.md  04_Verification_Service_Design.md  05_User_Management_Service_Design.md  06_Development_Sequencing_Plan.md
frontend/: .env.example  IMPLEMENTATION_SUMMARY.md  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
frontend/e2e/: README.md  accessibility.spec.ts  auth-fixed.spec.ts  auth.spec.ts  error-reporting-backend-integration.spec.ts  error-reporting-critical-bug-report.md  error-reporting-critical-bug.spec.ts  error-reporting-final-test.spec.ts  error-reporting-with-auth.spec.ts  error-reporting.spec.ts  error-reports-list-integration.spec.ts  mt-validation.spec.ts  navigation.spec.ts  run-critical-bug-tests.ts  speaker-management.spec.ts
frontend/playwright-report/: index.html  results.json  results.xml
frontend/src/: App.test.tsx  App.tsx
frontend/test-results/: .last-run.json
k8s/: configmap.yaml  error-reporting-deployment.yaml  namespace.yaml  postgres-deployment.yaml  secrets.yaml
monitoring/: alert_rules.yml  prometheus.yml
quality-reports/: autoflake-report.txt  bandit-output.txt  bandit-report.json  black-report.txt  eslint-output.txt  eslint-report.json  flake8-report.json  mypy-output.txt  mypy-report.xml  npm-audit.json  prettier-report.txt  quality-summary.md
references/: ser_similarity_matrix.py
scripts/: dev-logs.sh  dev-setup.sh  dev-start.sh  dev-stop.sh  quality-check.sh  test-all.sh  test-backend.sh  test-frontend.sh
src/api_gateway/: enhanced_error_reporting_router.py  main.py  speaker_bucket_management_router.py  verification_workflow_router.py
src/correction_engine_service/: main.py
src/error_reporting_service/: __init__.py  main.py
test-results/: backend-report.md  backend-unit.xml  comprehensive-testing-report.md  coverage.xml  error-reporting-test-report.md
tests/: TEST_STRATEGY.md  conftest.py  factories.py
(+494 files in other folders)
